<resources>
    <string name="app_name">The Herd</string>
    <string name="share_disc_name">your-symbology</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_di">DiActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_Flash">FlashActivity</string>
    <string name="facebook_app_id">429950714217173</string>
    <string name="fb_login_protocol_scheme">fb429950714217173</string>
    <string name="txt_mark_as_sold">Mark as Sold</string>
    <string name="txt_enter_sale_price">Enter Sale Price</string>
    <string name="txt_are_you_sure_delete_credit">Are you sure you want to delete the card ending with %s?</string>
    <string name="txt_are_you_sure_delete_post">Are you sure you want to delete this post %s?</string>
    <string name="txt_are_you_sure_delete_market_report">Are you sure you want to delete this market report: %s ?</string>
    <string name="title_tab_search">Search</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_my_herd">My Herd</string>
    <string name="title_alert">Alert</string>
    <string name="txt_card_name">Card Name</string>
    <string name="txt_expiry_month">Expiry Month</string>
    <string name="txt_expiry_year">Expiry Year</string>
    <string name="txt_cvv">CVV</string>
    <string name="title_tab_myad">My Ads</string>
    <string name="title_tab_reports">Reports</string>
    <string name="title_tab_stream">Stream</string>
    <string name="title_tab_me">Me</string>
    <string name="txt_unknown_error_try_again">Unknown server error.Please try again.</string>
    <string name="title_unknown">Unknown</string>
    <string name="title_n_a">N/A</string>
    <string name="txt_create_post">Create Post</string>
    <string name="txt_n_a">N/A</string>
    <string name="txt_choose_attach_image">Upload an Image</string>
    <string name="txt_post_content">Post content</string>
    <string name="txt_your_post_has_been_created">Your post has been created.</string>
    <string name="txt_account">Account</string>
    <string name="txt_edit_ad">Edit Ad</string>
    <string name="txt_edit_account">Edit Account Details</string>
    <string name="txt_payment_details">Payment Details</string>
    <string name="txt_sale_date_s">Sale Date: %s</string>
    <string name="txt_report_date">Report Date: %s</string>
    <string name="txt_report_by">Report by: %s</string>
    <string name="txt_no_media_for_this">Sorry, this item does not have media.</string>
    <string name="txt_register_successfully">Your account is created successfully.</string>
    <string name="txt_your_profile_is_updated">Your profile is updated.</string>
    <string name="txt_no_phone_number">Sorry, this user\'s phone number is unknown.</string>
    <string name="txt_no_email_address">Sorry, this user\'s email address is unkonw.</string>
    <string name="txt_livestock">Livestock</string>
    <string name="txt_audio_failed">Something is wrong when playing audio.</string>
    <string name="txt_fail_to_verify_card">Failed to verify card.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ball">BallActivity</string>
    <string name="txt_play_after_finish_record">Cannot play when recording.</string>
    <string name="txt_record_after_finish_play">Cannot record when playing.</string>
    <string name="txt_no_audio_file">Record an audio before playing</string>
    <string name="txt_stop_playing">Stop playing before publishing your market report.</string>
    <string name="txt_stop_recording">Stop recording before publishing your market report.</string>
    <string name="txt_payment">Payment</string>
    <string name="txt_refreshing">Refreshing</string>
    <string name="txt_unknown_address">Unknown address</string>
    <string name="txt_producer">Producer</string>
    <string name="txt_address_optional">Address(optional)</string>
    <string name="txt_phone_number_optional">Phone Number(optional)</string>
    <string name="txt_are_you_an_organisation">Are you an organisation?</string>
    <string name="txt_organisation_name">Organisation Name</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_organisation_email">Organisation Email</string>
    <string name="profile">What\'s your symbology profile? Express yourself with symbols &amp; find people like you.</string>
    <string name="library">LIBRARY</string>
    <string name="background">BACKGROUND</string>
    <string name="warning_dialog_title">The Herd</string>
    <string name="warning_dialog_network_error">Network Error</string>
    <string name="warning_dialog_server_error_num">Server Error %d</string>
    <string name="back_to_main">Back to Main Menu?</string>
    <string name="your_progress_will_be_lost">Your process will be lost.</string>
    <string name="your_disc_will_be_lost">Your disc will be lost, Make sure you\'ve saved it!</string>
    <string name="txt_allow_to_get_your_location">Please allow the-herd to access your location to search the advertisements near to you.
        \nClick Allow to retrieve your location.
        \nClick Deny to make a rough search without your location info.</string>
    <string name="txt_setting_location">
        You did not pick up an address. You can:
        \n1. Click Allow to search items near your current location.
        \n2. Click Skip to search all available items.</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_allow">Allow</string>
    <string name="txt_deny">Deny</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_draft">Draft</string>
    <string name="txt_rejected">Rejected</string>
    <string name="txt_scheduled">Scheduled</string>
    <string name="txt_published">Published</string>
    <string name="txt_price_cannot_lower_than">You bid price cannot lower than %s.</string>
    <string name="txt_bid_error">You cannot bid your own item.</string>
    <string name="txt_reserve_price">Reserve Price</string>
    <string name="txt_price">Price</string>
    <string name="txt_price_dollar">Price ($)</string>
    <string name="txt_date">Date</string>
    <string name="txt_load_paddock_sale">Load Paddock Sale</string>
    <string name="txt_load_prime_saleyard">Load Prime Saleyard</string>
    <string name="txt_load_store_slash_feature_saleyard">Load Store/Feature Saleyard</string>
    <string name="txt_load_market_report">Load Market Report</string>
    <string name="your_">Your disc will be lost. Make sure you\'ve saved it!</string>
    <string name="disc_meaning">What your disc means</string>
    <string name="choose_your_background">Choose your background</string>
    <string name="your_symbology_disc">YOUR SYMBOLOGY DISC</string>
    <string name="got_it">Got it</string>
    <string name="prompt_read_permission">Would you like to permit this app to read files?</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_request_audio">Permission Request. Allow this  App to access your microphone?</string>
    <string name="txt_permission_warning_audio">This permission allows you to record your voice. \n\nHit \'SETTING\' to set it.</string>
    <string name="permission_request_camera">Permission Request. Allow this  App to access your Camera?</string>
    <string name="txt_permission_warning_camera">This permission allows you to record video for your live stream.</string>
    <string name="permission_request_storage">Permission Request. Allow this  App to access your storage?</string>
    <string name="txt_permission_warning_storage">This permission allows you to pick up photos or videos from your local gallery, like changing your avatar, adding photos to advertisement, etc.\n\nHit \'SETTING\' to set it.</string>
    <string name="permission_request_location">Permission Request. Allow this App to access your location?</string>
    <string name="storage_is_denied">Storage permission was denied before. Please approve it in the phone\'s setting panel.\n\n
    Storage permission is required to save your disc into your album.</string>
    <string name="txt_permission_warning">Storage permission is required.\nPlease approve the storage permission from this phone\'s setting panel.</string>
    <string name="location_is_denied">This allows us to use your location to provide you certain features like showing the livestock\'s distance, searching livestock or entitySaleyard around you.\n\nHit \'SETTING\' to set it.</string>
    <string name="audio_record_is_denied">Audio Record permission was denied before.Please approve it in this phone\'s setting panel or skip this step.\n\n
    Audio Record permission is required to record audio.</string>
    <string name="desc_tour1">Express who you are by creating your own personalized symbology disc &amp; upload as your profile image to social media</string>
    <string name="desc_tour2">Complete the questions in 7 categories: Personality, Life Focus, Career, Social, Leisure, Environment &amp; Food</string>
    <string name="desc_tour3">Learn all 94 symbols from the library to interpret others\' symbology discs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="txt_enter_title">Enter Title</string>
    <string name="txt_start_date">Start Date</string>
    <string name="txt_select_start_date">Select Start Date</string>
    <string name="txt_images_video">Images &amp; Videos</string>
    <string name="txt_accept_offer">Accept Offer</string>
    <string name="txt_accept_offer_des">By submitting this you agree that you are making an agreement based on your chat logs with the buyer.</string>
    <string name="txt_enter_agreed_sale_price">Enter Agreed Sale Price</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_register">Register</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_login_in_to">Login to access this feature</string>
    <string name="txt_title">Title</string>
    <string name="txt_select_location">Select Location</string>
    <string name="txt_total_head">Total Head</string>
    <string name="txt_enter_total_head">enter Total Head</string>
    <string name="txt_category">Select Category</string>
    <string name="txt_sale_numbers">Sale Numbers</string>
    <string name="txt_type_sale_numbers">Type your number break down here</string>
    <string name="txt_attach_draw">Attach Draw</string>
    <string name="txt_notes">Notes</string>
    <string name="txt_notes_hints">You can include feature or late entries here</string>
    <string name="txt_select_category">Select Category</string>
    <string name="txt_location">Location</string>
    <string name="txt_attention">Attention Livestock Agents</string>
    <string name="txt_do_not_register">Do not register here if you want full access to load livestock, market reports and all of our  agent capabilities. We need to register your office via The Herd website. Agents can create a profile for their office and then invite staff to the profile.\n\nAlternatively call Sam at The Herd and we will help activate your account.</string>
    <string name="txt_go_to_website">Go to Website</string>
    <string name="txt_contact_sam">Contact Sam</string>
</resources>