<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_accept_offer"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginBottom="3dp"
        android:textColor="@color/colorDarkBlue"
        android:layout_marginTop="10dp"
         />

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDarkBlue"
        android:text="@string/txt_accept_offer_des"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:textSize="14dp"
        android:background="@drawable/background_edit_input_accept_offer"
        android:hint="@string/txt_enter_agreed_sale_price"
        android:inputType="numberDecimal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>